[project]
name = "ErisPulse-HelpModule"
version = "2.0.0"
description = "ErisPulse 帮助命令模块，提供自动化的命令帮助系统，支持查看所有可用命令及其用法说明"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [ { name = "wsu2059q", email = "wsu2059@qq.com" } ]

dependencies = [
]

[project.urls]
"homepage" = "https://github.com/wsu2059q/ErisPulse-HelpModule"

[project.entry-points."erispulse.module"]
"HelpModule" = "ErisPulse_HelpModule:HelpModule"
